# babywatch-ai

./: .gitignore  CLAUDE.md  app.py  main.py  pyproject.toml
core/: __init__.py  gpu_monitor.py  inference_engine.py  model_loader.py  model_registry.py
models/: registry.json
pages/: 模型管理.py  模型验证.py  设备状态.py
pages/模型/: 模型管理.py  模型验证.py
pages/设备/: 设备状态.py
